# AlkOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  alkos_cli.bash
alkos/: .devnotes.md  CMakeLists.txt
alkos/kernel/: CMakeLists.txt
alkos/kernel/abi/: debug_terminal.hpp  panic.hpp  pre_kernel_init.hpp  terminal.hpp  timers.hpp
alkos/kernel/arch/: convert_to_elf64.bash
alkos/kernel/arch/i686/: boot.nasm
alkos/kernel/arch/x86_64/: CMakeLists.txt  boot.nasm  boot32.nasm  boot64.nasm  check_and_handle_errors.nasm  check_long_mode.nasm  check_longmode.nasm  check_multiboot.nasm  convert_to_elf64.bash  enable_long_mode.nasm  enable_paging.nasm  enable_paging_and_long_mode.nasm  gdt64.nasm  init.cpp  linker.ld  mutliboot_header.nasm  os_hang.nasm  panic_32.cpp  setup_page_tables.nasm  stack.nasm  test1_32.cpp  test_32.cpp  vga_print.nasm
alkos/kernel/arch/x86_64/abi/: panic.cpp  terminal_32.cpp
alkos/kernel/arch/x86_64/abi/debug/: debug_terminal.cpp
alkos/kernel/arch/x86_64/abi/terminal/: terminal.cpp  terminal_32.nasm
alkos/kernel/arch/x86_64/boot32/: CMakeLists.txt  boot32.nasm  gdt.nasm  init.cpp  linker.ld
alkos/kernel/arch/x86_64/boot32/checks/: check_cpuid.nasm  check_long_mode.nasm  check_multiboot.nasm
alkos/kernel/arch/x86_64/boot32/definitions/: mutliboot_header.nasm  page_tables.nasm
alkos/kernel/arch/x86_64/boot32/enables/: enable_long_mode.nasm  enable_paging.nasm  setup_page_tables.nasm
alkos/kernel/arch/x86_64/boot32/include/: elf.hpp  libc.hpp  multiboot2.h  paging.hpp  tags.hpp
alkos/kernel/arch/x86_64/boot32/src/: elf.cpp  enter_kernel.nasm  init.cpp  libc.cpp  multiboot2.cpp  paging.cpp
alkos/kernel/arch/x86_64/boot32/utils/: framebuffer_print.nasm  handle_return_code.nasm  locate_framebuffer_tag.nasm  reg_to_message.nasm
alkos/kernel/arch/x86_64/boot64/: CMakeLists.txt  arch_utils.cpp  boot64.nasm  init.cpp  linker.ld
alkos/kernel/arch/x86_64/boot64/abi/: timers.cpp  timers.hpp
alkos/kernel/arch/x86_64/boot64/cxx/: crtn.nasm
alkos/kernel/arch/x86_64/boot64/definitions/: gdt.nasm  stack.nasm
alkos/kernel/arch/x86_64/boot64/enables/: enable_avx.nasm
alkos/kernel/arch/x86_64/boot64/include/: idt.hpp  panic.nasm  trace.nasm
alkos/kernel/arch/x86_64/boot64/interrupts/: idt.cpp  idt.nasm  isrs.cpp
alkos/kernel/arch/x86_64/boot64/tests/: floating_point.cpp  floating_point.nasm  interrupts_tests.cpp  manual_tests.cpp
alkos/kernel/arch/x86_64/boot64/utils/: arch_utils.cpp
alkos/kernel/arch/x86_64/checks/: check_cpuid.nasm  check_long_mode.nasm  check_multiboot.nasm
alkos/kernel/arch/x86_64/common/: CMakeLists.txt  arch_utils.hpp  io.hpp  loader_data.hpp  multiboot2.h  multiboot2_extensions.hpp  multiboot2_extensions.tpp
alkos/kernel/arch/x86_64/common/abi/: debug_terminal.hpp  panic.cpp  terminal.cpp  terminal.hpp
alkos/kernel/arch/x86_64/common/include/: arch_utils.hpp  comp.h  io.hpp  loader_data.hpp  multiboot2.h  puts.nasm  return_codes.nasm
alkos/kernel/arch/x86_64/common/src/: multiboot2_extensions.cpp
alkos/kernel/arch/x86_64/cxx/: crti.S  crti.nasm  crtn.S
alkos/kernel/arch/x86_64/drivers/: vga.cpp
alkos/kernel/arch/x86_64/drivers/apic/: apic.cpp
alkos/kernel/arch/x86_64/drivers/pic8259/: pic8259.cpp  pic8259.hpp
alkos/kernel/arch/x86_64/drivers/qemu_serial_port/: qemu_serial_port.hpp  serial32.nasm  serial_32.cpp
alkos/kernel/arch/x86_64/drivers/serial_port_qemu/: serial_qemu.cpp  serial_qemu.hpp  (+2 more)
alkos/kernel/arch/x86_64/enables/: enable_avx.nasm  enable_extensions.nasm  enable_long_mode.nasm  enable_osxsave.nasm  enable_paging.nasm  enable_sse.nasm  setup_page_tables.nasm
alkos/kernel/arch/x86_64/include/: arch_utils.hpp  comp.h  comp.hpp  constants.hpp  error_codes.nasm  idt.hpp  io.hpp  log.nasm  panic.nasm  puts.nasm  trace.nasm
alkos/kernel/arch/x86_64/interrupts/: idt.cpp  idt.nasm  isrs.cpp
alkos/kernel/arch/x86_64/tests/: floating_point.cpp  interrupts_tests.cpp
alkos/kernel/arch/x86_64/utils/: arch_utils.cpp  check_and_handle_errors.nasm  error_messages.nasm  framebuffer_print.nasm  handle_return_code.nasm  locate_framebuffer_tag.nasm  messages.nasm  reg_to_message.nasm  return_codes.nasm  vga_print.nasm
alkos/kernel/include/: bit.hpp  concepts.hpp  debug.hpp  debug_terminal.hpp  defines.hpp  init.hpp  kernel_assert.hpp  panic.hpp  physical_mem_allocator.hpp  physical_memory_manager.hpp  serial64.h  temp.hpp  terminal.hpp  timing.hpp  todo.hpp  types.hpp
alkos/kernel/src/: cppsupport.cpp  init.cpp  kernel.cpp  panic.cpp  physical_mem_allocator.cpp  physical_memory_manager.cpp  test_framework.cpp  tester.cpp  timing.cpp
alkos/kernel/test/: asserts_tests.cpp  bit_test.cpp  cxx_tests.cpp  libcxx_test.cpp  manual_tests.cpp  math_test.cpp  mem_test.cpp  physical_memory_manager_test.cpp  stdio_test.cpp  string_test.cpp  template_lib_test.cpp  test_framework.hpp  test_module.cpp  test_time.cpp  tester.hpp  tests.cpp  tuple_test.cpp  type_traits_test.cpp
alkos/kernel/test/test_module/: expect.hpp  macros.hpp  test.hpp  test_group_base.hpp  test_module.hpp
alkos/libc/: CMakeLists.txt
alkos/libc/arch/x86_64/: CMakeLists.txt
alkos/libc/cxx/: cxx.cpp
alkos/libc/errno/: errno.cpp
alkos/libc/include/: assert.h  defines.h  defines.hpp  errno.h  libssp.h  libssp.hpp  math.h  memory.h  new.hpp  stdio.h  stdlib.h  string.h  time.h  todo.h  types.h
alkos/libc/include/extensions/: algorithm.hpp  assert_base.hpp  cstddef.hpp  defines.hpp  new.hpp  template_lib.hpp  time.hpp  tuple.hpp  type_traits.hpp  utility.hpp
alkos/libc/include/math/: checks.h  operations.hpp
alkos/libc/internal/: time_internal.cpp  time_internal.hpp
alkos/libc/io/: snprintf.cpp
alkos/libc/libssp/: libssp.cpp  libssp.hpp
alkos/libc/math/: math.cpp
alkos/libc/memory/: memory.cpp
alkos/libc/string/: string.cpp  strlen.cpp
alkos/libc/time/: asctime.cpp  ctime.cpp  gmtime.cpp  localtime.cpp  mktime.cpp  strftime.cpp  time.cpp
alkos/toolchains/: i386-flags.cmake  i386-toolchain.cmake  i686-elf-toolchain.cmake  x86_64-elf-toolchain.cmake  x86_64-flags.cmake  x86_64-toolchain.cmake
(+90 files in other folders)
